--- a/Desktop/workspace_itj/board/src/main/resources/templates/boardview.html
+++ b/Desktop/workspace_itj/board/src/main/resources/templates/boardview.html
@@ -10,6 +10,7 @@
     제목입니다
 </h1>
 <p th:text="${board.content}">내용입니다.</p>
+<a th:href="@{${board.filepath}}">다운받기</a>
 <a th:href="@{/board/delete(id=${board.id})}">글 삭제</a>
 <a th:href="@{/board/modify/{id}(id=${board.id})}">글 수정</a>
 
