--- a/Desktop/workspace_itj/board/src/main/resources/templates/message.html
+++ b/Desktop/workspace_itj/board/src/main/resources/templates/message.html
@@ -13,6 +13,7 @@
     alert(message);
 
     location.replace([[${searchUrl}]]);
+    // location.replace([[${modifyUrl}]]);
 
     /*]]>*/
 </script>
