errer - 수정시 500에러

--- a/Desktop/workspace_itj/board/src/main/resources/templates/message.html
+++ b/Desktop/workspace_itj/board/src/main/resources/templates/message.html
@@ -13,7 +13,7 @@
     alert(message);
 
     location.replace([[${searchUrl}]]);
-    // location.replace([[${modifyUrl}]]);
+    location.replace([[${modifyUrl}]]);
 
     /*]]>*/
 </script>
